<resources>
    <string name="app_name">Ride Share!</string>
    <string name="app_description">App description</string>
    <string name="activity_route_heading">Create your Routes</string>
    <string name="activity_route_instructions">Draw the required route on the Map</string>
    <string name="activity_route_name">Route Name</string>
    <string name="activity_route_start">Start</string>
    <string name="activity_route_destination">Destination</string>
    <string name="activity_route_name_hint">Enter Route Name</string>
    <string name="activity_route_start_hint">Enter Starting point</string>
    <string name="activity_route_destination_hint">Enter Destination</string>
    <string name="activity_route_btn_find_directions">Save Route</string>
    <string name="activity_share_my_ride">Share my ride</string>
    <string name="activity_share_my_ride_instructions">Draw the required route on the Map</string>
    <string name="activity_share_select_route">Select Route</string>
    <string name="activity_share_start">Start</string>
    <string name="activity_share_group">Group</string>
    <string name="activity_share_ridefare">Ride Fare</string>
    <string name="activity_share_leaving_at">Leaving at</string>
    <string name="activity_share_destination">Destination</string>
    <string name="activity_share_starting_point_hint">Enter Starting point</string>
    <string name="activity_share_destination_hint">Enter Destination</string>
    <string name="activity_share_ride_fare_hint">Eg. 1000</string>
    <string name="activity_share_ride_leaving_at_hint">Enter Leaving destination</string>
    <string-array name="share_my_ride">
        <item>My Main Route</item>
        <item>My Main Route2</item>

    </string-array>
    <string-array name="share_my_ride_group">
        <item>Dialog Office</item>
        <item>Mobitel Office</item>

    </string-array>
    <string name="activity_location_heading">Add your Locations</string>
    <string name="activity_location_instructions">Point your locations on the map</string>
    <string name="activity_location_name">Location Name</string>
    <string name="activity_location_name_hint">Enter Location Name</string>
    <string name="activity_location_start">Start</string>
    <string name="activity_location_destination">Destination</string>
    <string name="activity_location_start_hint">Enter Starting point</string>
    <string name="activity_location_destination_hint">Enter Destination</string>
    <string name="activity_location_btn_save_location">Save Location</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome to Ride Share!</string>
    <string name="text_fname">FIRST NAME</string>
    <string name="text_lname">LAST NAME</string>
    <string name="text_email">Email</string>
    <string name="text_email_hint">Enter email id</string>
    <string name="text_number">NUMBER</string>
    <string name="text_number_hint">Number</string>
    <string name="text_passs">PASSWORD</string>
    <string name="text_pass_hint">Enter Password</string>
    <string name="text_pass_current">Enter  Password</string>
    <string name="text_pass_current_hint">Enter Current Password</string>
    <string name="text_pass_new">NEW PASSWORD</string>
    <string name="text_pass_new_hint">Enter New Password</string>
    <string name="text_pass_retype">CONFIRM NEW PASSWORD</string>
    <string name="text_pass_retype_hint">Enter Confirm New Password</string>
    <string name="text_address">ADDRESS</string>
    <string name="text_bio">BIO</string>
    <string name="text_zip">ZIPCODE</string>
    <string name="text_google">GOOGLE</string>
    <string name="text_facebook">FACEBOOK</string>
    <string name="text_next">NEXT</string>
    <string name="text_signin">Sign In</string>
    <string name="reason1">Driver delayed.</string>
    <string name="reason2">I have changed my mind.</string>
    <string name="reason3">I want to book another cab.</string>
    <string name="text_back">Back</string>
    <string name="text_mything">MY THING</string>
    <string name="text_desc1">AGE</string>
    <string name="text_desc2">TYPE</string>
    <string name="text_comment">Write about your experience.We are always glad to hear from you.</string>
    <string name="text_register">Register</string>
    <string name="text_copyright">All Copyrights Reserved by Zambrone team</string>
    <string name="text_signin_with">Sign in with</string>
    <string name="text_username">Username</string>
    <string name="text_username_hint">Enter email</string>
    <string name="text_password">Password</string>
    <string name="text_password_hint">Enter Password</string>
    <string name="text_credit_card_number">Credit card number</string>
    <string name="text_credit_card_holder">CREDIT CARD HOLDER</string>
    <string name="text_mm">mm</string>
    <string name="rider">Register as Rider</string>
    <string name="sharer">Register as Sharer</string>
    <string name="new_user">New User?</string>
    <string name="text_yy">yy</string>
    <string name="text_cvc">cvv</string>
    <string name="text_addpayment">ADD PAYMENT</string>
    <string name="dialog_delete_card">Delete Card</string>
    <string name="dialog_delete_event">Delete Event</string>
    <string name="dialog_delete_card_text">Are you sure ?</string>
    <string name="text_submit">Submit</string>
    <string name="text_apply">APPLY</string>
    <string name="text_register_with">Register with</string>
    <string name="text_or">Or</string>
    <string name="text_forgetpass">Forgot Password?</string>
    <string name="text_upload_picture">Upload Picture From</string>
    <string name="text_estTime">Est. Time</string>
    <string name="text_estTimeWithColon">Est. Time:</string>
    <string name="text_make_request">Make a request</string>
    <string name="text_add_card">Add Payment Card</string>
    <string name="text_remove">Remove</string>
    <string name="text_skip_card"><u>You can skip</u></string>
    <string name="text_scan">Scan Card</string>
    <string name="text_add_manually">Add Manually</string>
    <string name="text_contacting">Contacting nearby driver</string>
    <string name="text_waiting_for_confirm">WAITING FOR DRIVER TO CONFIRM YOUR TRIP</string>
    <string name="text_creating_request">CREATING REQUEST</string>
    <string name="text_changing_default_card">CHANGING DEFAULT CARD</string>
    <string name="text_deleting_card">DELETING CARD</string>
    <string name="text_deleting_event">DELETING EVENT</string>
    <string name="text_success_delete_card">Card deleted successfully.</string>
    <string name="text_success_delete_event">Event deleted successfully.</string>
    <string name="text_changing_payment_mode">CHANGING PAYMENT MODE</string>
    <string name="text_canceling_request">CANCELING REQUEST</string>
    <string name="text_adding_dest">ADDING DESTINATION</string>
    <string name="text_registering">REGISTERING</string>
    <string name="text_adding_event">ADDING EVENT</string>
    <string name="text_getting_event">GETTING EVENT</string>
    <string name="text_rating">RATING</string>
    <string name="text_apply_promo">APPLYING PROMO CODE</string>
    <string name="text_cancel">CANCEL</string>
    <string name="text_cancel_trip">Cancel</string>
    <string name="text_pickmeup">Set pickup location</string>
    <string name="text_contact">CONTACT DRIVER</string>
    <string name="text_name">NAME</string>
    <string name="text_gallary">GALLERY</string>
    <string name="text_ok">OK</string>
    <string name="text_camera">CAMERA</string>
    <string name="text_call">CALL</string>
    <string name="text_choosepicture">CHOOSE PICTURE</string>
    <string name="text_getting_direction">GETTING DIRECTIONS</string>
    <string name="text_update">UPDATE</string>
    <string name="text_my_location">My Location</string>
    <string name="text_drive_location">Driver Location</string>
    <string name="text_miles">KM</string>
    <string name="text_mins">mins</string>
    <string name="progress_loading">LOADING </string>
    <string name="toast_register_success">You have been registered successfully</string>
    <string name="ok">OK</string>
    <string name="toast_update_success">Profile updated successfully</string>
    <string name="dialog_logout">Logout</string>
    <string name="dialog_logout_text">Are you sure ?</string>
    <string name="profile">PROFILE</string>
    <string name="payment">PAYMENT</string>
    <string name="adding_payment">ADDING CARD</string>
    <string name="text_getting_ref_code">GETTING REFERRAL CODE </string>
    <string name="text_please_wait">PLEASE WAIT </string>
    <string name="text_getting_tours">GETTING TOURS </string>
    <string name="text_booking_tours">BOOKING TOURS </string>
    <string name="text_share">Share</string>
    <string name="text_share_app">Share app!</string>
    <string name="text_rate_ride">RATE YOUR RIDE</string>
    <string name="payment_unit">$</string>
    <string name="text_for">for</string>
    <string name="text_per">/</string>
    <string name="text_min">min</string>
    <string name="text_carid">Car id</string>
    <string name="text_plate_no">Plate No.</string>
    <string name="text_delete_msg">Messege deleted.</string>
    <string name="text_device_registered">Device Registerd</string>
    <string name="text_device_unregistered">Device Unregisterd</string>
    <string name="text_trip_details">Trip Details</string>
    <string name="text_confirm_future_request">Thank You for your Booking. Your driver details will be shared 30 mins before your pickup time</string>
    <string name="progress_canceling_trip">Canceling your Trip</string>
    <string name="text_ongoing_trip">Trip is in progress</string>
    <string name="text_future_trip">Trip has yet to start</string>
    <string name="text_my_bookings">My Bookings</string>
    <string name="progress_getting_trips">Fetching your Trips</string>
    <string name="title_activity_booking_details">Booking Details</string>
    <string name="text_cancel_request">Cancel Request</string>
    <string name="validate_history_date">From-date must be earlier than to-date</string>
    <string name="text_note_referral">"\nPlease take a note of your Referral code -"</string>
    <string name="text_error_get_image">unable to get image, please try again.</string>
    <string name="text_menu_profile">Profile</string>
    <string name="text_menu_payment">Payments</string>
    <string name="text_menu_history">History</string>
    <string name="text_menu_referral">Referral</string>
    <string name="text_menu_logout">Logout</string>
    <string name="text_add_vehicle">Add vehicle</string>
    <string name="text_vehicle_number">Vehicle Number</string>
    <string name="text_brand">Brand</string>
    <string name="text_model">Model</string>
    <string name="text_seating_capasity">Seating Capasity</string>
    <string name="text_heading_rides">Rides</string>
    <string name="text_sedan">SEDAN</string>
    <string name="text_bike">BIKE</string>
    <string name="text_enter_email">Please enter email id</string>
    <string name="text_enter_password">Please enter password</string>
    <string name="text_enter_password_valid">Password should be at least 6 charater long</string>
    <string name="text_getting_info">Getting Info</string>
    <string name="text_wait">Wait</string>
    <string name="text_enter_valid_email">Please enter valid email id</string>
    <string name="applicationId">1483165521989893</string>
    <string name="text_enter_event_name">Please enter event name</string>
    <string name="text_enter_event_time">Please enter event time</string>
    <string name="text_enter_event_member">Please enter event members</string>
    <string name="text_enter_event_amount">Please enter maximum amount</string>
    <string name="text_enter_event_address">Please enter event address</string>
    <string name="text_enter_name">Please enter first name</string>
</resources>