<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="top"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <apps.zambrone.com.carpooling.component.MyFontTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_bill_padding_one"
                    android:paddingBottom="@dimen/dimen_fp_margin"
                    android:paddingTop="@dimen/dimen_fp_margin"
                    android:text="@string/activity_share_my_ride_instructions"
                    android:textAlignment="viewStart"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/textColor" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingTop="@dimen/dimen_bill_padding_one">

            <apps.zambrone.com.carpooling.component.MyFontTextView

                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dimen_bill_padding_one"
                android:text="@string/activity_route_name"
                android:textColor="@color/textColor" />

            <Spinner
                android:id="@+id/acivity_share_ride_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/share_my_ride"

                android:paddingRight="@dimen/dimen_bill_padding_one" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingTop="@dimen/dimen_bill_padding_one">


            <apps.zambrone.com.carpooling.component.MyFontTextView

                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dimen_bill_padding_one"
                android:text="@string/activity_share_start"
                android:textColor="@color/textColor" />

            <apps.zambrone.com.carpooling.component.MyFontEdittextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
            android:textColor="@color/textColor"
                android:ems="10"

                android:hint="@string/activity_route_start_hint"
                android:inputType="text"
                android:paddingRight="@dimen/dimen_bill_padding_one" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.67"
            android:orientation="horizontal"
            android:paddingTop="@dimen/dimen_bill_padding_one">


            <apps.zambrone.com.carpooling.component.MyFontTextView
                android:id="@+id/login_tv_email"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dimen_bill_padding_one"
                android:text="@string/activity_share_destination"
                android:textColor="@color/textColor" />

            <apps.zambrone.com.carpooling.component.MyFontEdittextView
                android:id="@+id/editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:ems="10"
                android:hint="@string/activity_share_destination"
                android:inputType="textPassword" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingTop="@dimen/dimen_bill_padding_one">


            <apps.zambrone.com.carpooling.component.MyFontTextView

                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dimen_bill_padding_one"
                android:text="@string/activity_share_group"
                android:textColor="@color/textColor" />

            <Spinner
                android:id="@+id/spinner4"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/share_my_ride_group"
                android:paddingLeft="@dimen/dimen_bill_padding_one"
                android:paddingRight="@dimen/dimen_bill_padding_one" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingTop="@dimen/dimen_bill_padding_one">


            <apps.zambrone.com.carpooling.component.MyFontTextView

                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dimen_bill_padding_one"
                android:text="@string/activity_share_ridefare"
                android:textColor="@color/textColor" />

            <apps.zambrone.com.carpooling.component.MyFontEdittextView
                android:id="@+id/ed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:ems="10"
                android:hint="@string/activity_share_ride_fare_hint"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingTop="@dimen/dimen_bill_padding_one">


            <apps.zambrone.com.carpooling.component.MyFontTextView

                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dimen_bill_padding_one"
                android:text="@string/activity_share_leaving_at"
                android:textColor="@color/textColor" />

            <apps.zambrone.com.carpooling.component.MyFontEdittextView
                android:id="@+id/acivity_share_ride_et_leaving_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:ems="10"
                android:hint="@string/activity_share_ride_leaving_at_hint"
                android:inputType="text" />

        </LinearLayout>


        <apps.zambrone.com.carpooling.component.MyFontButton
            android:id="@+id/activity_route_btn_save_route"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:background="@drawable/buttonselector"
            android:gravity="center"
            android:text="@string/activity_route_btn_find_directions"
            android:textColor="@color/white"
            android:textSize="@dimen/size_general"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"

            android:layout_weight="13.14"
            android:weightSum="1">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="170dp"

                android:layout_alignParentBottom="true"
                android:orientation="horizontal"
                android:layout_weight="0.94">


                <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:map="http://schemas.android.com/apk/res-auto"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:id="@+id/map"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:context="apps.zambrone.com.carpooling.SaveRouteActivity" />


            </LinearLayout>




        </LinearLayout>


    </LinearLayout>
    </ScrollView>
</LinearLayout>


